[project]
name = "nonebot-plugin-nonememe"
dynamic = ["version"]
description = "The daily life of the NoneBot group members"
authors = [{ name = "student_2333", email = "lgc2333@126.com" }]
dependencies = [
    "nonebot2>=2.2.0",
    "nonebot-plugin-alconna>=0.40.1",
    "nonebot-plugin-apscheduler>=0.3.0",
    "httpx>=0.24.1",
    "json5>=0.9.14",
    "anyio>=3.6.2",
    "typing-extensions>=4.7.1",
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/lgc-NB2Dev/nonebot-plugin-nonememe"

[tool.pdm.build]
includes = []

[tool.pdm.version]
source = "file"
path = "nonebot_plugin_nonememe/__init__.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
