[project]
name = "nonebot-plugin-nonememe"
dynamic = ["version"]
description = "The daily life of the NoneBot group members"
authors = [{ name = "LgCookie", email = "lgc2333@126.com" }]
dependencies = [
    "nonebot2>=2.3.1",
    "nonebot-plugin-alconna>=0.48.0",
    "nonebot-plugin-apscheduler>=0.5.0",
    "httpx>=0.27.0",
    "json5>=0.9.25",
    "anyio>=4.4.0",
    "typing-extensions>=4.12.2",
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/lgc-NB2Dev/nonebot-plugin-nonememe"

[tool.pdm.build]
includes = []

[tool.pdm.version]
source = "file"
path = "nonebot_plugin_nonememe/__init__.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
