[project]
name = "nonebot-plugin-nonememe"
dynamic = ["version"]
description = "The daily life of the NoneBot group members"
authors = [{ name = "LgCookie", email = "lgc2333@126.com" }]
dependencies = [
    "nonebot2>=2.4.3",
    "nonebot-plugin-alconna>=0.59.4",
    "nonebot-plugin-apscheduler>=0.5.0",
    "httpx>=0.28.1",
    "json5>=0.12.0",
    "anyio>=4.10.0",
    "typing-extensions>=4.14.1",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/lgc-NB2Dev/nonebot-plugin-nonememe"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "nonebot_plugin_nonememe/__init__.py"
